--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-warning">
-  <!-- <app></app> -->
-  <!-- <div class="app"></div> -->
+<body">
   <div id="app"></div>
 </body>
 </html>
